fill in contact and menu page

--- a/src/template.html
+++ b/src/template.html
@@ -16,7 +16,7 @@
             </nav>
         </header>
 
-        <div id="content"></div>
+        <main id="content"></main>
 
         <footer class="green-bg">Made by Christin6</footer>
     </body>
